# ChangeLog for app-editors/nedit
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/nedit/ChangeLog,v 1.21 2004/03/07 04:47:11 geoman Exp $

  06 Mar 2004; Stephen P. Becker <geoman@gentoo.org>
  nedit-5.4_pre20030213.ebuild:
  Added ~mips keyword.

  23 Feb 2004; Sven Blumenstein <bazik@gentoo.org>
  nedit-5.4_pre20030213.ebuild:
  Stable on sparc

  23 Jan 2004; Heinrich Wendel <lanius@gentoo.org> nedit-5.3-r1.ebuild,
  nedit-5.3-r2.ebuild, nedit-5.4_pre20030213.ebuild:
  fix xfree dep; remove 5.3-r1

  11 Jan 2004; Heinrich Wendel <lanius@gentoo.org> nedit-5.3-r1.ebuild,
  nedit-5.3-r2.ebuild, nedit-5.4_pre20030213.ebuild:
  fixed motif dep

  21 Oct 2003; Seemant Kulleen <seemant@gentoo.org> nedit-5.3-r1.ebuild,
  nedit-5.3-r2.ebuild, nedit-5.4_pre20030213.ebuild:
  changed SRC_URIs for nedit downloads to mirror://nedit, recently added to
  thirdpartymirrors file

  03 Oct 2003; Aron Griffis <agriffis@gentoo.org> nedit-5.3-r2.ebuild:
  Stable on alpha

*nedit-5.4_pre20030213 (28 Apr 2003)

  29 Jun 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Added missing changelog entry.

  13 May 2003; Tavis Ormandy <taviso@gentoo.org> nedit-5.3-r2.ebuild:
  marking nedit ~alpha.

*nedit-5.4_pre20030212 (15 Feb 2003)

  22 Apr 2003; Graham Forest <vladimir@gentoo.org> nedit-5.3-r2.ebuild,
  nedit-5.4_pre20030213.ebuild:
  app-text/aspell -> virtual/aspell-dict

  15 Feb 2003; Nick Hadaway <raker@gentoo.org> nedit-5.4_pre20030212.ebuild,
  files/digest-nedit-5.4_pre20030213 :
  Pulled from cvs on 20030213.  Added CC=${CC} to the make line to this
  new version and to 5.3-r2

*nedit-5.3-r2 (19 Jan 2003)

  26 Jan 2003; Seemant Kulleen <seemant@gentoo.org> nedit-5.3-r2.ebuild :

  Added virtual/motif as a dependency.  Closes bug #13879 by
  yanestra@web.de (Klaus-J. Wolf)

  19 Jan 2003; Seemant Kulleen <seemant@gentoo.org> nedit-5.3-r2.ebuild
  files/nedit-5.3-gentoo.diff files/digest-nedit-5.3-r2 :
