@@ -1,6 +1,8 @@
 MD5 309788ce67cf850ba696aea07d8e7cb0 nedit-5.3-r2.ebuild 1064
 MD5 33639fa520c0784ca62f335d7b6a7eed nedit-5.4_pre20030213.ebuild 1080
-MD5 d7302f3badd5b984aa331820c42e9acf ChangeLog 3463
+MD5 329f03252233ef558a9f9548e069d4e7 nedit-5.4.ebuild 904
+MD5 4acfa130a4ad0764d51a39f77efa4dc8 ChangeLog 3586
 MD5 d67d5d17a4951126595fe2eb36897f15 files/digest-nedit-5.3-r2 68
 MD5 f1de401822d203ac95aa0366234fb63a files/nedit-5.3-gentoo.diff 2629
 MD5 670415ebfa4cdbe202a201f5fabba73c files/digest-nedit-5.4_pre20030213 74
+MD5 4223c3125634eaecc7bd7556581cc29b files/digest-nedit-5.4 69
