@@ -1,0 +1,37 @@
+# Copyright 1999-2004 Gentoo Technologies, Inc.
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-editors/nedit/Attic/nedit-5.4.ebuild,v 1.1 2004/03/09 14:25:42 lanius Exp $
+
+DESCRIPTION="multi-purpose text editor for the X Window System"
+HOMEPAGE="http://nedit.org/"
+SRC_URI="mirror://sourceforge/nedit/${P}-source.tar.gz"
+
+SLOT="0"
+LICENSE="GPL-2"
+KEYWORDS="~x86 ~ppc ~sparc ~mips"
+IUSE="spell"
+
+RDEPEND="spell? ( virtual/aspell-dict )
+	x11-base/xfree"
+
+DEPEND="${RDEPEND}
+	dev-util/yacc
+	x11-libs/openmotif"
+
+src_compile() {
+	make CC=${CC} linux || die
+}
+
+src_install() {
+	into /usr
+	dobin source/nedit
+	exeinto /usr/bin
+	newexe source/nc neditc
+	newman doc/nedit.man nedit.1
+	newman doc/nc.man neditc.1
+
+	dodoc README ReleaseNotes ChangeLog COPYRIGHT
+	cd doc
+	dodoc *.txt nedit.doc README.FAQ NEdit.ad
+	dohtml *.{dtd,xsl,xml,html,awk}
+}
