@@ -1,6 +1,6 @@
 # ChangeLog for app-editors/nedit
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/nedit/ChangeLog,v 1.21 2004/03/07 04:47:11 geoman Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/nedit/ChangeLog,v 1.22 2004/03/09 14:25:42 lanius Exp $
 
   06 Mar 2004; Stephen P. Becker <geoman@gentoo.org>
   nedit-5.4_pre20030213.ebuild:
@@ -9,6 +9,11 @@
   23 Feb 2004; Sven Blumenstein <bazik@gentoo.org>
   nedit-5.4_pre20030213.ebuild:
   Stable on sparc
+
+*nedit-5.4 (09 Mar 2004)
+
+  09 Mar 2004; Heinrich Wendel <lanius@gentoo.org> nedit-5.4.ebuild:
+  version bump, bug #44035
 
   23 Jan 2004; Heinrich Wendel <lanius@gentoo.org> nedit-5.3-r1.ebuild,
   nedit-5.3-r2.ebuild, nedit-5.4_pre20030213.ebuild:
